--- a/cards.html
+++ b/cards.html
@@ -43,7 +43,7 @@
 
 
     <div class="card-body"
-        style="position: absolute;width: 620px;height: 180px;left: 42px;top: 125px;background-color:rgb(231, 231, 231);display: flex;padding-top:30px;border-radius: 80px 0 0px 80px;box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.25);filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));">
+        style="position: absolute;width: 620px;height: 190px;left: 42px;top: 125px;background-color:rgb(231, 231, 231);display: flex;padding-top:30px;border-radius: 80px 0 0px 80px;box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.25);filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));">
 
         <div class="icon"style="height:120px; width: 180px;background-color:none;border-radius:50%; justify-content:center; display: flex; align-items:center; ">
             <svg width="282" height="182" viewBox="0 0 162 162" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -59,10 +59,10 @@
                 </svg>
         </div>
         <div class="user_update"style="height:100%;width:220px;background-color:none">
-            <div class="card-center" style="font-size: 25px;text-align: left;font-weight: bold;padding-top: 0px;padding: 0 0 0px 30px;font-family: 'Montserrat';padding-top: 25px;">
+            <div class="card-center" style="font-size: 25px;text-align: left;font-weight: bold;padding-top: 0px;padding:0px 0 0px 30px;padding-bottom:0px;font-family: 'Montserrat';padding-top: 5px;">
                 Peter Pan &#10004;
             </div>
-            <div class="update" style="padding: 30px;text-align: left;font-size: 18px; padding-top: 25px;background-color:none;">
+            <div class="update" style="padding: 30px;text-align: left;font-size: 18px; padding-top: 40px;background-color:none;">
                 <p style="margin:0px;" > Updated</p>
                 27th April 2021
             </div>
