--- a/cards.html
+++ b/cards.html
@@ -15,6 +15,7 @@
     <title>Cards!</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, user-scalable=yes">
 </head>
 
 <body>
@@ -43,7 +44,7 @@
 
 
     <div class="card-body"
-        style="position: absolute;width: 620px;height: 190px;left: 42px;top: 125px;background-color:rgb(231, 231, 231);display: flex;padding-top:30px;border-radius: 80px 0 0px 80px;box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.25);filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));">
+        style="position: absolute;width: 600px;height: 190px;left: 2px;top: 125px;background-color:rgb(231, 231, 231);display: flex;padding-top:30px;border-radius: 80px 0 0px 80px;box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.25);filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));">
 
         <div class="icon"style="height:120px; width: 180px;background-color:none;border-radius:50%; justify-content:center; display: flex; align-items:center; ">
             <svg width="282" height="182" viewBox="0 0 162 162" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -67,8 +68,8 @@
                 27th April 2021
             </div>
         </div>
-        <div class="user_details"style="height:100%;width:200px;background-color:none; padding-top:83px;text-align: left;padding-left:30px">
-            <p style="margin:3px; margin-left: 80px;" > 1234567890</p>
+        <div class="user_details"style="height:100%;width:200px;background-color:none; padding-top:83px;text-align: left;padding-left:10px">
+            <p style="margin:2px; margin-left: 70px;" > 1234567890</p>
            
             <p style="margin-top: 0px; display: flex; justify-content: space-between;"><i class="material-icons">place</i>Location,State,Country</p>
             
